force-app/main/default/objects/Hospital_Visit_Attendee__c/Hospital_Visit_Attendee__c.object-meta.xml
<CustomObject>
    <description>Used to track puppet shows where we manage to track which families we see</description>
    <label>Hospital Visit Attendee</label>
    <nameField>
        <displayFormat>HV-{000}</displayFormat>
        <label>Hospital Visit Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospital Visit Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>