force-app/main/default/objects/Hospital_Visit_Attendee__c/fields/Prospective_Family__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospective Family</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Hospital Visit Attendees</relationshipLabel>
    <relationshipName>Hospital_Visit_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>