force-app/main/default/objects/Hospital_Visit_Attendee__c/fields/Puppet_Show__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show__c</fullName>
    <label>Puppet Show</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Only links with Hospital Visits or No Puppets.</errorMessage>
        <filterItems>
            <field>PuppetShow__c.Show_Type__c</field>
            <operation>equals</operation>
            <value>Hospital Visit</value>
        </filterItems>
        <filterItems>
            <field>PuppetShow__c.Show_Type__c</field>
            <operation>equals</operation>
            <value>Hospital Visit - No Puppets</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PuppetShow__c</referenceTo>
    <relationshipLabel>Hospital Visit Attendees</relationshipLabel>
    <relationshipName>Hospital_Visit_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>