force-app/main/default/objects/Hospital_Visit_Attendee__c/fields/Registered_Child__c.field-meta.xml
<CustomField>
    <fullName>Registered_Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Child</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Family_Member_Type__c</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hospital Visit Attendees</relationshipLabel>
    <relationshipName>Hospital_Visit_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>